VPC-Compute/nat_gateway.tf
# VPC-Compute/nat_gateway.tf

# Elastic IP for NAT Gateway
resource "aws_eip" "nat" {
  count  = var.enable_nat_gateway ? 1 : 0
  domain = "vpc"

  tags = {
    Name = "Tag-BK"
  }

  depends_on = [aws_internet_gateway.main]
}

# NAT Gateway in public subnet
resource "aws_nat_gateway" "main" {
  count = var.enable_nat_gateway ? 1 : 0

  allocation_id = aws_eip.nat[0].id
  subnet_id     = aws_subnet.public1.id

  tags = {
    Name = "Tag-BK"
  }

  depends_on = [aws_internet_gateway.main]
}
